[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/gui/gui.gd" type="Script" id=1]
[ext_resource path="res://game/gui/img/Barra superior.png" type="Texture" id=2]
[ext_resource path="res://fonts/font.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/font.ttf"

[sub_resource type="DynamicFont" id=3]
size = 80
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="gui" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -854.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -539.03
margin_right = 1063.97
margin_bottom = 301.0
rect_scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 2 )

[node name="CenterContainer2" type="CenterContainer" parent="."]
margin_left = 1069.66
margin_top = 0.630249
margin_right = 1224.66
margin_bottom = 185.63
rect_scale = Vector2( 0.881071, 1.04175 )

[node name="time_label" type="Label" parent="."]
margin_left = 1075.38
margin_top = 8.16446
margin_right = 1230.38
margin_bottom = 99.1645
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "0:32"
valign = 1

[node name="timer" type="Timer" parent="."]
autostart = true

[node name="score_label" type="Label" parent="."]
margin_left = 837.287
margin_top = 5.32161
margin_right = 1021.29
margin_bottom = 51.3216
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "00000010"

[node name="hp_label" type="Label" parent="."]
visible = false
margin_left = 929.504
margin_top = 91.9492
margin_right = 1113.5
margin_bottom = 137.949
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "555"

[node name="hp_hearts" type="HBoxContainer" parent="."]
margin_left = 817.67
margin_top = 61.7682
margin_right = 817.67
margin_bottom = 61.7682
rect_scale = Vector2( 0.8, 0.8 )
custom_constants/separation = 50

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]
